change email links

--- a/src/mail/templates/confirmation.ejs
+++ b/src/mail/templates/confirmation.ejs
@@ -422,12 +422,12 @@
                             <tr>
                                 <td class="content-block">
                                     <span class="apple-link">A UFMS Company - Campo Grande, MS, Brazil<a
-                                            href="http://i.imgur.com/CScmqnj.gif">Unsubscribe</a>.
+                                            href="https://godevrel.netlify.com">Unsubscribe</a>.
                                 </td>
                             </tr>
                             <tr>
                                 <td class="content-block powered-by">
-                                    Powered by <a href="http://htmlemail.io">GoDevrel Team</a>.
+                                    Powered by <a href="https://godevrel.netlify.com">GoDevrel Team</a>.
                                 </td>
                             </tr>
                         </table>
