--- a/src/mail/templates/confirmation.ejs
+++ b/src/mail/templates/confirmation.ejs
@@ -151,8 +151,9 @@
                 <p style="margin: 0;">Caso tenha algum problema ao clicar no botão por conta de seu
                     navegador, copie e cole o link abaixo:</p>
                 <p style="margin: 0; max-width: 400px; width: 100%; overflow-wrap: break-word;"><a
+                        style="max-width: 400px; width: 100%; overflow-wrap: break-word;"
                         href="<%= locals.baseUrl %>/auth/email/validate?<%= locals.confirmationCode %>" target="_blank">
-                        <%= locals.baseUrl %>/auth/email/validate?<%= locals.confirmationCode %>
+                        Clique aqui com o botão direito -> "Copiar"
                     </a></p>
             </td>
         </tr>
