--- a/src/mail/templates/confirmation.ejs
+++ b/src/mail/templates/confirmation.ejs
@@ -122,7 +122,7 @@
         <tr>
             <td align="left" bgcolor="#ffffff"
                 style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
-                <p style="margin: 0;">Clique no botão abaixo para confirmar seu e-nail, após isso você
+                <p style="margin: 0;">Clique no botão abaixo para confirmar seu e-mail, após isso você
                     poderá deletar o e-mail com segurança</p>
             </td>
         </tr>
